# rust-template

./: Cargo.toml
src/: main.rs
templates/: Ideen Liste.txt
templates/cli-template/: Cargo.toml
templates/cli-template/src/: main.rs
templates/dioxus/: Cargo.toml
templates/dioxus/src/: main.rs
