[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.1"
config = {version = "0.13.3", features = ["toml"]}
env_logger = "0.10.0"
fs_extra = "1.3.0"
log = "0.4.20"
